added AccountReference,TransactionDesc and ShortCode to stk
